@@ -1,30 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      lang="en"
-      metal:use-macro="context/main_template/macros/master"
-      i18n:domain="ftw.mail">
-    <body>
-
-        <metal:main fill-slot="main">
-            <tal:main-macro metal:define-macro="main"
-                            tal:define="email view/email">
-
-
-                <h1 class="documentFirstHeading" tal:content="view/title">Mail in for ...</h1>
-
-                <div class="documentDecription" i18n:translate="mailin_description">
-                    Use the follwing email Address to send content to this folder
-                </div>
-
-                <div class="field">
-                    <input size="100" type="text" tal:attributes="value email" />
-                </div>
-
-                <h2><a href="#" tal:attributes="href string:mailto:${email}" tal:content="email" /></h2>
-
-            </tal:main-macro>
-        </metal:main>
-    </body>
-</html>
+<div class="MailInLinkWrapper" i18n:domain="ftw.mail" tal:condition="view/available">
+  <span class="MailInLink" i18n:translate="label_mailin">Mail-In address</span>
+  <a tal:define="email view/email"
+     href="#" tal:attributes="href string:mailto:${email}" tal:content="email" />
+</div>
